--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-<div class="top-section">
+<header>
+
   <h1>
     Guess the color
     <br>
@@ -21,14 +21,15 @@
     <br>
     <div id="dif">
     <br>
-      <button class="mode">Easy</button>
-      <button class="mode">Medium</button>
-      <button class="mode selected">Hard</button>
+      <button class="d">Easy</button>
+      <button class="d">Medium</button>
+      <button class="d selected">Hard</button>
     </div>
   </h1>
-</div>
 
+</header>
 
+  <body>
 <div class="container">
   <div class="box"></div>
   <div class="box"></div>
@@ -39,9 +40,7 @@
   <div class="box"></div>
   <div class="box"></div>
   <div class="box"></div>
-  <div class="box"></div>
-  <div class="box"></div>
-  <div class="box"></div>
+
 </div>
 
 
